src/main/java/de/dfki/cps/stools/SimilaritySpecParser.java
// $ANTLR 3.3 Nov 30, 2010 12:50:56 SimilaritySpec.g 2012-03-21 12:37:26

package de.dfki.cps.stools;


import org.antlr.runtime.*;
import org.antlr.runtime.tree.*;

public class SimilaritySpecParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ALTERNATIVES", "ALT", "ENTRY", "ALLBUT", "OPT", "OPTIONAL", "MANDAT", "MANDATORY", "EQUIVSPECS", "EQUIVSPEC", "EXTENDS", "XMLNS", "XMLNSPREFIX", "ELEMENT", "LIMIT", "ANNOTATIONS", "ABSENT", "CONSTITUENTS", "UNORDERED", "ORDERED", "TEXTNODE", "SPLITNODESTART", "SPLITNODEEND", "SPLITNODE", "COMMENTNODE", "IGNORE", "PREFIXEDNAME", "UNPREFIXEDNAME", "TUPLE", "EQUIVELEM", "DEFAULTSPEC", "NCNAME", "ATTVALUE", "STRINGCONTENT", "NameStartChar", "NameChar", "WS", "'{'", "'}'", "','", "'='", "'_'", "'\\\\'", "'('", "')'", "'['", "']'", "':'"
    };
    public static final int EOF=-1;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int ALTERNATIVES=4;
    public static final int ALT=5;
    public static final int ENTRY=6;
    public static final int ALLBUT=7;
    public static final int OPT=8;
    public static final int OPTIONAL=9;
    public static final int MANDAT=10;
    public static final int MANDATORY=11;
    public static final int EQUIVSPECS=12;
    public static final int EQUIVSPEC=13;
    public static final int EXTENDS=14;
    public static final int XMLNS=15;
    public static final int XMLNSPREFIX=16;
    public static final int ELEMENT=17;
    public static final int LIMIT=18;
    public static final int ANNOTATIONS=19;
    public static final int ABSENT=20;
    public static final int CONSTITUENTS=21;
    public static final int UNORDERED=22;
    public static final int ORDERED=23;
    public static final int TEXTNODE=24;
    public static final int SPLITNODESTART=25;
    public static final int SPLITNODEEND=26;
    public static final int SPLITNODE=27;
    public static final int COMMENTNODE=28;
    public static final int IGNORE=29;
    public static final int PREFIXEDNAME=30;
    public static final int UNPREFIXEDNAME=31;
    public static final int TUPLE=32;
    public static final int EQUIVELEM=33;
    public static final int DEFAULTSPEC=34;
    public static final int NCNAME=35;
    public static final int ATTVALUE=36;
    public static final int STRINGCONTENT=37;
    public static final int NameStartChar=38;
    public static final int NameChar=39;
    public static final int WS=40;

    // delegates
    // delegators


        public SimilaritySpecParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public SimilaritySpecParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return SimilaritySpecParser.tokenNames; }
    public String getGrammarFileName() { return "SimilaritySpec.g"; }


    public static class equivspecs_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "equivspecs"
    // SimilaritySpec.g:51:1: equivspecs : ( equivspec )* -> ^( EQUIVSPECS ( equivspec )* ) ;
    public final SimilaritySpecParser.equivspecs_return equivspecs() throws RecognitionException {
        SimilaritySpecParser.equivspecs_return retval = new SimilaritySpecParser.equivspecs_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        SimilaritySpecParser.equivspec_return equivspec1 = null;


        RewriteRuleSubtreeStream stream_equivspec=new RewriteRuleSubtreeStream(adaptor,"rule equivspec");
        try {
            // SimilaritySpec.g:52:5: ( ( equivspec )* -> ^( EQUIVSPECS ( equivspec )* ) )
            // SimilaritySpec.g:52:10: ( equivspec )*
            {
            // SimilaritySpec.g:52:10: ( equivspec )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==EQUIVSPEC) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // SimilaritySpec.g:0:0: equivspec
            	    {
            	    pushFollow(FOLLOW_equivspec_in_equivspecs233);
            	    equivspec1=equivspec();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_equivspec.add(equivspec1.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);



            // AST REWRITE
            // elements: equivspec
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 52:21: -> ^( EQUIVSPECS ( equivspec )* )
            {
                // SimilaritySpec.g:52:24: ^( EQUIVSPECS ( equivspec )* )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(EQUIVSPECS, "EQUIVSPECS"), root_1);

                // SimilaritySpec.g:52:37: ( equivspec )*
                while ( stream_equivspec.hasNext() ) {
                    adaptor.addChild(root_1, stream_equivspec.nextTree());

                }
                stream_equivspec.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "equivspecs"

    public static class equivspec_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "equivspec"
    // SimilaritySpec.g:55:1: equivspec : EQUIVSPEC NCNAME ( namespace | extension )? '{' ( xmlnsdecls )* ( element | glblmt | ignore )* ( defaultspec )? '}' ;
    public final SimilaritySpecParser.equivspec_return equivspec() throws RecognitionException {
        SimilaritySpecParser.equivspec_return retval = new SimilaritySpecParser.equivspec_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token EQUIVSPEC2=null;
        Token NCNAME3=null;
        Token char_literal6=null;
        Token char_literal12=null;
        SimilaritySpecParser.namespace_return namespace4 = null;

        SimilaritySpecParser.extension_return extension5 = null;

        SimilaritySpecParser.xmlnsdecls_return xmlnsdecls7 = null;

        SimilaritySpecParser.element_return element8 = null;

        SimilaritySpecParser.glblmt_return glblmt9 = null;

        SimilaritySpecParser.ignore_return ignore10 = null;

        SimilaritySpecParser.defaultspec_return defaultspec11 = null;


        Object EQUIVSPEC2_tree=null;
        Object NCNAME3_tree=null;
        Object char_literal6_tree=null;
        Object char_literal12_tree=null;

        try {
            // SimilaritySpec.g:56:2: ( EQUIVSPEC NCNAME ( namespace | extension )? '{' ( xmlnsdecls )* ( element | glblmt | ignore )* ( defaultspec )? '}' )
            // SimilaritySpec.g:56:5: EQUIVSPEC NCNAME ( namespace | extension )? '{' ( xmlnsdecls )* ( element | glblmt | ignore )* ( defaultspec )? '}'
            {
            root_0 = (Object)adaptor.nil();

            EQUIVSPEC2=(Token)match(input,EQUIVSPEC,FOLLOW_EQUIVSPEC_in_equivspec259); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            EQUIVSPEC2_tree = (Object)adaptor.create(EQUIVSPEC2);
            root_0 = (Object)adaptor.becomeRoot(EQUIVSPEC2_tree, root_0);
            }
            NCNAME3=(Token)match(input,NCNAME,FOLLOW_NCNAME_in_equivspec262); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            NCNAME3_tree = (Object)adaptor.create(NCNAME3);
            adaptor.addChild(root_0, NCNAME3_tree);
            }
            // SimilaritySpec.g:56:23: ( namespace | extension )?
            int alt2=3;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==XMLNS) ) {
                alt2=1;
            }
            else if ( (LA2_0==EXTENDS) ) {
                alt2=2;
            }
            switch (alt2) {
                case 1 :
                    // SimilaritySpec.g:56:24: namespace
                    {
                    pushFollow(FOLLOW_namespace_in_equivspec265);
                    namespace4=namespace();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, namespace4.getTree());

                    }
                    break;
                case 2 :
                    // SimilaritySpec.g:56:36: extension
                    {
                    pushFollow(FOLLOW_extension_in_equivspec269);
                    extension5=extension();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, extension5.getTree());

                    }
                    break;

            }

            char_literal6=(Token)match(input,41,FOLLOW_41_in_equivspec273); if (state.failed) return retval;
            // SimilaritySpec.g:56:53: ( xmlnsdecls )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==XMLNSPREFIX) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // SimilaritySpec.g:56:54: xmlnsdecls
            	    {
            	    pushFollow(FOLLOW_xmlnsdecls_in_equivspec277);
            	    xmlnsdecls7=xmlnsdecls();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, xmlnsdecls7.getTree());

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);

            // SimilaritySpec.g:56:67: ( element | glblmt | ignore )*
            loop4:
            do {
                int alt4=4;
                switch ( input.LA(1) ) {
                case ELEMENT:
                    {
                    alt4=1;
                    }
                    break;
                case LIMIT:
                    {
                    alt4=2;
                    }
                    break;
                case IGNORE:
                    {
                    alt4=3;
                    }
                    break;

                }

                switch (alt4) {
            	case 1 :
            	    // SimilaritySpec.g:56:68: element
            	    {
            	    pushFollow(FOLLOW_element_in_equivspec282);
            	    element8=element();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, element8.getTree());

            	    }
            	    break;
            	case 2 :
            	    // SimilaritySpec.g:56:78: glblmt
            	    {
            	    pushFollow(FOLLOW_glblmt_in_equivspec286);
            	    glblmt9=glblmt();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, glblmt9.getTree());

            	    }
            	    break;
            	case 3 :
            	    // SimilaritySpec.g:56:87: ignore
            	    {
            	    pushFollow(FOLLOW_ignore_in_equivspec290);
            	    ignore10=ignore();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, ignore10.getTree());

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);

            // SimilaritySpec.g:56:97: ( defaultspec )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==DEFAULTSPEC) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // SimilaritySpec.g:0:0: defaultspec
                    {
                    pushFollow(FOLLOW_defaultspec_in_equivspec295);
                    defaultspec11=defaultspec();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, defaultspec11.getTree());

                    }
                    break;

            }

            char_literal12=(Token)match(input,42,FOLLOW_42_in_equivspec298); if (state.failed) return retval;

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "equivspec"

    public static class extension_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "extension"
    // SimilaritySpec.g:59:1: extension : EXTENDS NCNAME ( ( ',' )? NCNAME )* -> ^( EXTENDS ( NCNAME )+ ) ;
    public final SimilaritySpecParser.extension_return extension() throws RecognitionException {
        SimilaritySpecParser.extension_return retval = new SimilaritySpecParser.extension_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token EXTENDS13=null;
        Token NCNAME14=null;
        Token char_literal15=null;
        Token NCNAME16=null;

        Object EXTENDS13_tree=null;
        Object NCNAME14_tree=null;
        Object char_literal15_tree=null;
        Object NCNAME16_tree=null;
        RewriteRuleTokenStream stream_NCNAME=new RewriteRuleTokenStream(adaptor,"token NCNAME");
        RewriteRuleTokenStream stream_43=new RewriteRuleTokenStream(adaptor,"token 43");
        RewriteRuleTokenStream stream_EXTENDS=new RewriteRuleTokenStream(adaptor,"token EXTENDS");

        try {
            // SimilaritySpec.g:60:2: ( EXTENDS NCNAME ( ( ',' )? NCNAME )* -> ^( EXTENDS ( NCNAME )+ ) )
            // SimilaritySpec.g:60:5: EXTENDS NCNAME ( ( ',' )? NCNAME )*
            {
            EXTENDS13=(Token)match(input,EXTENDS,FOLLOW_EXTENDS_in_extension320); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_EXTENDS.add(EXTENDS13);

            NCNAME14=(Token)match(input,NCNAME,FOLLOW_NCNAME_in_extension322); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_NCNAME.add(NCNAME14);

            // SimilaritySpec.g:60:20: ( ( ',' )? NCNAME )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==NCNAME||LA7_0==43) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // SimilaritySpec.g:60:21: ( ',' )? NCNAME
            	    {
            	    // SimilaritySpec.g:60:21: ( ',' )?
            	    int alt6=2;
            	    int LA6_0 = input.LA(1);

            	    if ( (LA6_0==43) ) {
            	        alt6=1;
            	    }
            	    switch (alt6) {
            	        case 1 :
            	            // SimilaritySpec.g:0:0: ','
            	            {
            	            char_literal15=(Token)match(input,43,FOLLOW_43_in_extension325); if (state.failed) return retval; 
            	            if ( state.backtracking==0 ) stream_43.add(char_literal15);


            	            }
            	            break;

            	    }

            	    NCNAME16=(Token)match(input,NCNAME,FOLLOW_NCNAME_in_extension328); if (state.failed) return retval; 
            	    if ( state.backtracking==0 ) stream_NCNAME.add(NCNAME16);


            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);



            // AST REWRITE
            // elements: NCNAME, EXTENDS
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 60:36: -> ^( EXTENDS ( NCNAME )+ )
            {
                // SimilaritySpec.g:60:39: ^( EXTENDS ( NCNAME )+ )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(stream_EXTENDS.nextNode(), root_1);

                if ( !(stream_NCNAME.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_NCNAME.hasNext() ) {
                    adaptor.addChild(root_1, stream_NCNAME.nextNode());

                }
                stream_NCNAME.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "extension"

    public static class xmlnsdecls_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "xmlnsdecls"
    // SimilaritySpec.g:62:1: xmlnsdecls : XMLNSPREFIX NCNAME '=' ATTVALUE ;
    public final SimilaritySpecParser.xmlnsdecls_return xmlnsdecls() throws RecognitionException {
        SimilaritySpecParser.xmlnsdecls_return retval = new SimilaritySpecParser.xmlnsdecls_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token XMLNSPREFIX17=null;
        Token NCNAME18=null;
        Token char_literal19=null;
        Token ATTVALUE20=null;

        Object XMLNSPREFIX17_tree=null;
        Object NCNAME18_tree=null;
        Object char_literal19_tree=null;
        Object ATTVALUE20_tree=null;

        try {
            // SimilaritySpec.g:63:2: ( XMLNSPREFIX NCNAME '=' ATTVALUE )
            // SimilaritySpec.g:63:5: XMLNSPREFIX NCNAME '=' ATTVALUE
            {
            root_0 = (Object)adaptor.nil();

            XMLNSPREFIX17=(Token)match(input,XMLNSPREFIX,FOLLOW_XMLNSPREFIX_in_xmlnsdecls352); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            XMLNSPREFIX17_tree = (Object)adaptor.create(XMLNSPREFIX17);
            root_0 = (Object)adaptor.becomeRoot(XMLNSPREFIX17_tree, root_0);
            }
            NCNAME18=(Token)match(input,NCNAME,FOLLOW_NCNAME_in_xmlnsdecls355); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            NCNAME18_tree = (Object)adaptor.create(NCNAME18);
            adaptor.addChild(root_0, NCNAME18_tree);
            }
            char_literal19=(Token)match(input,44,FOLLOW_44_in_xmlnsdecls357); if (state.failed) return retval;
            ATTVALUE20=(Token)match(input,ATTVALUE,FOLLOW_ATTVALUE_in_xmlnsdecls360); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            ATTVALUE20_tree = (Object)adaptor.create(ATTVALUE20);
            adaptor.addChild(root_0, ATTVALUE20_tree);
            }

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "xmlnsdecls"

    public static class namespace_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "namespace"
    // SimilaritySpec.g:65:1: namespace : XMLNS ATTVALUE ;
    public final SimilaritySpecParser.namespace_return namespace() throws RecognitionException {
        SimilaritySpecParser.namespace_return retval = new SimilaritySpecParser.namespace_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token XMLNS21=null;
        Token ATTVALUE22=null;

        Object XMLNS21_tree=null;
        Object ATTVALUE22_tree=null;

        try {
            // SimilaritySpec.g:66:2: ( XMLNS ATTVALUE )
            // SimilaritySpec.g:66:5: XMLNS ATTVALUE
            {
            root_0 = (Object)adaptor.nil();

            XMLNS21=(Token)match(input,XMLNS,FOLLOW_XMLNS_in_namespace373); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            XMLNS21_tree = (Object)adaptor.create(XMLNS21);
            root_0 = (Object)adaptor.becomeRoot(XMLNS21_tree, root_0);
            }
            ATTVALUE22=(Token)match(input,ATTVALUE,FOLLOW_ATTVALUE_in_namespace376); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            ATTVALUE22_tree = (Object)adaptor.create(ATTVALUE22);
            adaptor.addChild(root_0, ATTVALUE22_tree);
            }

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "namespace"

    public static class element_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "element"
    // SimilaritySpec.g:68:1: element : ELEMENT simpleelem '{' ( alternative )? '}' ;
    public final SimilaritySpecParser.element_return element() throws RecognitionException {
        SimilaritySpecParser.element_return retval = new SimilaritySpecParser.element_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token ELEMENT23=null;
        Token char_literal25=null;
        Token char_literal27=null;
        SimilaritySpecParser.simpleelem_return simpleelem24 = null;

        SimilaritySpecParser.alternative_return alternative26 = null;


        Object ELEMENT23_tree=null;
        Object char_literal25_tree=null;
        Object char_literal27_tree=null;

        try {
            // SimilaritySpec.g:69:2: ( ELEMENT simpleelem '{' ( alternative )? '}' )
            // SimilaritySpec.g:69:5: ELEMENT simpleelem '{' ( alternative )? '}'
            {
            root_0 = (Object)adaptor.nil();

            ELEMENT23=(Token)match(input,ELEMENT,FOLLOW_ELEMENT_in_element391); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            ELEMENT23_tree = (Object)adaptor.create(ELEMENT23);
            root_0 = (Object)adaptor.becomeRoot(ELEMENT23_tree, root_0);
            }
            pushFollow(FOLLOW_simpleelem_in_element394);
            simpleelem24=simpleelem();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, simpleelem24.getTree());
            char_literal25=(Token)match(input,41,FOLLOW_41_in_element396); if (state.failed) return retval;
            // SimilaritySpec.g:69:30: ( alternative )?
            int alt8=2;
            int LA8_0 = input.LA(1);

            if ( (LA8_0==ALTERNATIVES||LA8_0==ANNOTATIONS||LA8_0==CONSTITUENTS) ) {
                alt8=1;
            }
            switch (alt8) {
                case 1 :
                    // SimilaritySpec.g:0:0: alternative
                    {
                    pushFollow(FOLLOW_alternative_in_element399);
                    alternative26=alternative();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, alternative26.getTree());

                    }
                    break;

            }

            char_literal27=(Token)match(input,42,FOLLOW_42_in_element402); if (state.failed) return retval;

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "element"

    public static class defaultspec_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "defaultspec"
    // SimilaritySpec.g:71:1: defaultspec : DEFAULTSPEC '{' ( alternative )? '}' ;
    public final SimilaritySpecParser.defaultspec_return defaultspec() throws RecognitionException {
        SimilaritySpecParser.defaultspec_return retval = new SimilaritySpecParser.defaultspec_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token DEFAULTSPEC28=null;
        Token char_literal29=null;
        Token char_literal31=null;
        SimilaritySpecParser.alternative_return alternative30 = null;


        Object DEFAULTSPEC28_tree=null;
        Object char_literal29_tree=null;
        Object char_literal31_tree=null;

        try {
            // SimilaritySpec.g:71:14: ( DEFAULTSPEC '{' ( alternative )? '}' )
            // SimilaritySpec.g:71:17: DEFAULTSPEC '{' ( alternative )? '}'
            {
            root_0 = (Object)adaptor.nil();

            DEFAULTSPEC28=(Token)match(input,DEFAULTSPEC,FOLLOW_DEFAULTSPEC_in_defaultspec413); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            DEFAULTSPEC28_tree = (Object)adaptor.create(DEFAULTSPEC28);
            root_0 = (Object)adaptor.becomeRoot(DEFAULTSPEC28_tree, root_0);
            }
            char_literal29=(Token)match(input,41,FOLLOW_41_in_defaultspec416); if (state.failed) return retval;
            // SimilaritySpec.g:71:35: ( alternative )?
            int alt9=2;
            int LA9_0 = input.LA(1);

            if ( (LA9_0==ALTERNATIVES||LA9_0==ANNOTATIONS||LA9_0==CONSTITUENTS) ) {
                alt9=1;
            }
            switch (alt9) {
                case 1 :
                    // SimilaritySpec.g:0:0: alternative
                    {
                    pushFollow(FOLLOW_alternative_in_defaultspec419);
                    alternative30=alternative();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, alternative30.getTree());

                    }
                    break;

            }

            char_literal31=(Token)match(input,42,FOLLOW_42_in_defaultspec422); if (state.failed) return retval;

            }
